<resources>
    <string name="app_name">Curious</string>
    <string name="paste_link">Paste the comment link here</string>
    <string name="button">View Comment</string>
    <string name="instructions1">Share the comment in reddit</string>
    <string name="instructions2">app using \'Curious\'</string>

    <string name="view_on_reddit">View on reddit</string>
    <string name="view_on_removeddit">View on Removeddit</string>
    <string name="more_details">More details</string>
    <string name="deleted">[deleted]</string>

    <string name="removed_quick">[removed too quickly to be archived]</string>
    <string name="not_archived">[no archived data found]</string>


    <string name="note">\nNOTE:\nDue to Pushshift\'s nature as an archive tool, information displayed here may not accurately reflect what is currently displayed on reddit.\n"</string>
    <string name="author">Author: </string>
    <string name="score">Score: </string>
    <string name="subreddit">Subreddit: </string>
    <string name="submitted">Submitted (UTC): </string>
    <string name="archived">Archived (UTC): </string>
    <string name="authorID">Author ID: </string>
    <string name="commentID">Comment ID: </string>
    <string name="parentID">Parent ID: </string>
    <string name="linkID">Link ID: </string>
    <string name="subredditID">Subreddit ID: </string>
    <string name="click"><a href="https://www.reddit.com/bcxguf">Click here for more info</a></string>
    <string name="dev_email">yk12@iitbbs.ac.in</string>
</resources>