<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="textUri"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#05c5cf"
            android:textColorLink="#05c5cf"
            android:hint="@string/paste_link"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#fff"
            android:onClick="buttonClick"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="OR"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="72dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/instructions1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="72dp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000000"
            android:text="@string/instructions2"/>

    </LinearLayout>

</LinearLayout>