<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@android:color/white"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_author_tv"
                android:textColor="@android:color/white"
                android:text="@string/author"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="@android:color/white"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:id="@+id/md_score_tv"
                android:text="@string/score"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subreddit"
                android:textColor="@android:color/white"
                android:minLines="2"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_sub_tv"
                android:textColor="@android:color/white"
                android:text="@string/subreddit"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submitted"
                android:textColor="@android:color/white"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_submitted_tv"
                android:textColor="@android:color/white"
                android:text="@string/submitted"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/archived"
                android:textColor="@android:color/white"
                android:minLines="2"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_archived_tv"
                android:textColor="@android:color/white"
                android:text="@string/archived"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/authorID"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_authorID_tv"
                android:textColor="@android:color/white"
                android:text="@string/authorID"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/commentID"
                android:textColor="@android:color/white"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_commentID_tv"
                android:textColor="@android:color/white"
                android:text="@string/commentID"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parentID"
                android:textColor="@android:color/white"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_parentID_tv"
                android:text="@string/parentID"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/linkID"
                android:textColor="@android:color/white"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_linkID_tv"
                android:text="@string/linkID"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subredditID"
                android:layout_weight="2"
                android:textColor="@android:color/white"
                android:minLines="2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:id="@+id/md_subID_tv"
                android:text="@string/subredditID"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/md_source_tv"
            android:textColor="@android:color/white"
            android:autoLink="web"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/md_note_tv"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/note" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/md_click_tv"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/click" />
    </LinearLayout>

</ScrollView>